# cpp_cad

./: CMakeLists.txt  CppCadConfig.cmake.in  README.md  build_packages.sh  cppcad.pc.in
docs/examples/: CMakeLists.txt
docs/examples/linear_extrude/: CMakeLists.txt  linear_extrude.cpp
docs/examples/rotate_extrude/: CMakeLists.txt  config.h  rotate_extrude.cpp
docs/examples/solid_difference/: CMakeLists.txt  config.h  solid_difference.cpp
include/: cpp_cad.h
include/cpp_cad/: Aff_transformation_3.h  Cube_3_Builder.h  Cube_3_Modifier.h  Cylinder_3_TessalationBuilder.h  Cylinder_3_TessalationModifier.h  Cylinder_3_operation_logging.h  Nef_polyhedron_3.h  Polygon_2.cpp  Polygon_2.h  Polygon_2_TransformsIterator.h  Polygon_set_2.h  Polyhedron_3.h  Polyhedron_3_operation_logging.h  Sphere_3_TessalationModifier.h  Sphere_3_operation_logging.h  point_3.h  reference_frame.h
include/cpp_cad/Polyhedron_3/: Cube_3_Builder.h  Cube_3_Modifier.h  Cylinder_3_TessalationBuilder.h  Cylinder_3_TessalationModifier.h  Cylinder_3_operation_logging.h  LinearExtrusionBuilder.h  LinearExtrusionModifier.h  PolygonExtrusionBuilder.h  PolygonExtrusionModifier.h  PolygonExtrusion_operation_logging.h  Polyhedron_3.h  Polyhedron_3_BuilderBase.h  Polyhedron_3_operation_logging.h  Sphere_3_TessalationBuilder.h  Sphere_3_TessalationModifier.h  Sphere_3_operation_logging.h
include/cpp_cad/Spline/: Bezier_3_ThroughPointsCalculator.h  CubicBezierSegment.h  CubicBezierSegmentBase.h  CubicBezierSegmentBasisMatrixCalculator.h  CubicBezierSegmentCalculatorBase.h  CubicBezierSegmentCuspCalculator.h  CubicBezierSegmentInflectionCalculator.h  CubicBezierSegmentLinearizer.h  CubicBezierSegmentQrsBasisCalculator.h
include/cpp_cad/TransformIterator/: BezierSplineTransformIterator.h  Circle.h  CircleTransformIterator.h  Circle_TransformIterator.h  CubicBezierSegmentTransformIterator.h  Polygon_2_TransformIterator.h  RotateTransformIterator.h  Rotate_TransformIterator.h  Rotation.h  TransformIterator.h
include/cpp_cad/algebra/: vector_3.h
include/cpp_cad/operation_logging/: Aff_transformation_3.h  Polygon_2.h  matrix.h  tuple.h
include/cpp_cad/operation_logging/Polyhedron_3/: Cylinder_3_operation_logging.h  PolygonExtrusion_operation_logging.h  PolyhedronBuilder_operation_logging.h  Sphere_3_operation_logging.h
include/cpp_cad/operation_logging/Spline/: CubicBezierSegment.h
include/cpp_cad/operation_logging/TransformIterator/: Polygon_2_TransformIterator.h  RotateTransformIterator.h
test/: CMakeLists.txt  GoogleTest.CMakeLists.txt.in
test/cpp_cad/: CMakeLists.txt  config.h
test/cpp_cad/Spline/: CMakeLists.txt  CubicBezierSegment-calculate-cusp-test.cpp  CubicBezierSegment-cusp-and-inflection-calculator-test.cpp
